--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8080
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/todolist
 spring.datasource.username=root
-spring.datasource.password=Mohan1312@A
+spring.datasource.password=*****
 spring.datasource.dbcp2.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
